--- a/config/experiments/DEBUG.yaml
+++ b/config/experiments/DEBUG.yaml
@@ -10,10 +10,10 @@ experiment_setup:
   visualize: true # last batch of last epoch will be visualized
 
 model:
-  patch_size: 12  # number of points per patch 
+  patch_size: 16  # number of points per patch 
   mask_ratio: 0.3 
   num_points: 2048 # number points per instance
-  masking_strategy: random # can be 'random', 'block', 'xysplit'
+  masking_strategy: xysplit # can be 'random', 'block', 'xysplit'
   encoder_dims: 1024 
   decoder_dims: 1024
   mlp_dim: 2048
@@ -26,7 +26,7 @@ model:
 
 pretraining:
   epochs: 1
-  batch_size: 1
+  batch_size: 4
   num_workers: 2
   shuffle: true
   pin_memory: false
