--- a/config/experiments/BASELINE_ALS_50K.yaml
+++ b/config/experiments/BASELINE_ALS_50K.yaml
@@ -1,5 +1,5 @@
 experiment_setup:
-  name: BASELINE_CUSTOM_PATCHING
+  name: baseline_cu_patching_als50k
   experiment_dir: null # set automatically
   checkpoints_dir: null
   visualization_dir: null
@@ -29,7 +29,8 @@ pretraining:
   batch_size: 8
   num_workers: 8
   shuffle: true
-  pin_memory: false
+  pin_memory: true
+  prefetch_factor: 2
 
   save_interval: 50
   resume: false 
