--- a/config/experiments/BASELINE_FORSPECIES.yaml
+++ b/config/experiments/BASELINE_FORSPECIES.yaml
@@ -1,5 +1,5 @@
 experiment_setup:
-  name: BASELINE_CUSTOM_PATCHING_FORSPECIES
+  name: bl_cu_patching_forspecies
   experiment_dir: null # set automatically
   checkpoints_dir: null
   visualization_dir: null
@@ -29,7 +29,8 @@ pretraining:
   batch_size: 8
   num_workers: 8
   shuffle: true
-  pin_memory: false
+  pin_memory: true
+  prefetch_factor: 2
 
   save_interval: 50
   resume: false 
