--- a/config/experiments/FORSPECIES_QUADRANT.yaml
+++ b/config/experiments/FORSPECIES_QUADRANT.yaml
@@ -1,5 +1,5 @@
 experiment_setup:
-  name: baseline_rand_patching_als50k
+  name: quadrant_forspecies
   experiment_dir: null # set automatically
   checkpoints_dir: null
   visualization_dir: null
@@ -14,26 +14,26 @@ model:
   patch_size: 16  # number of points per patch 
   mask_ratio: 0.3
   num_points: 2048 # number points per instance
-  masking_strategy: random # can be 'random', 'block', 'xysplit'
+  masking_strategy: quadrant # can be 'random', 'block', 'xysplit', 'quadrant'
   encoder_dims: 1024 
   decoder_dims: 1024
   mlp_dim: 2048
   depth: 6
   num_heads: 8 
   dim_per_head: 64 
-  dropout: 0.5
+  dropout: 0.0 
   loss_alpha_center: 0.1
 
 
 pretraining:
-  epochs: 100
-  batch_size: 16
+  epochs: 1
+  batch_size: 8
   num_workers: 8
   shuffle: true
   pin_memory: true
   prefetch_factor: 2
 
-  save_interval: 30
+  save_interval: 50
   resume: false 
   resume_path: null
   
@@ -49,7 +49,7 @@ pretraining:
     eta_min: 0.0001
 
   dataset:
-    name: ALS_50K
+    name: FORSPECIES
 
 
 downstream: 
@@ -72,24 +72,25 @@ downstream:
 
   optimizer:
     _target_: torch.optim.Adam
-    lr: 0.0004
+    lr: 0.0001
     weight_decay: 0.01
 
   schedulers: # list of schedulers as they are applied sequentially: pos matters
   - _target_: torch.optim.lr_scheduler.LinearLR
     start_factor: 0.1 
     end_factor: 1.0
-    total_iters: 30
+    total_iters: 10
   - _target_: torch.optim.lr_scheduler.CosineAnnealingLR 
     T_max: 270
-    eta_min: 0.000004
+    eta_min: 0.000001
 
   dataset:
     name: FORAGE 
-    fraction: 0.10
+    fraction: 1.0
   
   regression_criterion:
     _target_: torch.nn.SmoothL1Loss
+
 
 
 
